// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatePicker /> accepts external \`id\` value 1`] = `
<TextInput
  id="ID"
  inputClassName="datepicker"
  options={
    Object {
      "autoClose": false,
      "container": null,
      "defaultDate": null,
      "disableDayFn": null,
      "disableWeekends": false,
      "events": Array [],
      "firstDay": 0,
      "format": "mmm dd, yyyy",
      "i18n": Object {
        "cancel": "Cancel",
        "clear": "Clear",
        "done": "Ok",
        "months": Array [
          "January",
          "February",
          "March",
          "April",
          "May",
          "June",
          "July",
          "August",
          "September",
          "October",
          "November",
          "December",
        ],
        "monthsShort": Array [
          "Jan",
          "Feb",
          "Mar",
          "Apr",
          "May",
          "Jun",
          "Jul",
          "Aug",
          "Sep",
          "Oct",
          "Nov",
          "Dec",
        ],
        "nextMonth": "›",
        "previousMonth": "‹",
        "weekdays": Array [
          "Sunday",
          "Monday",
          "Tuesday",
          "Wednesday",
          "Thursday",
          "Friday",
          "Saturday",
        ],
        "weekdaysAbbrev": Array [
          "S",
          "M",
          "T",
          "W",
          "T",
          "F",
          "S",
        ],
        "weekdaysShort": Array [
          "Sun",
          "Mon",
          "Tue",
          "Wed",
          "Thu",
          "Fri",
          "Sat",
        ],
      },
      "isRTL": false,
      "maxDate": null,
      "minDate": null,
      "onClose": null,
      "onDraw": null,
      "onOpen": null,
      "onSelect": null,
      "parse": null,
      "setDefaultDate": false,
      "showClearBtn": false,
      "showDaysInNextAndPreviousMonths": false,
      "showMonthAfterYear": false,
      "yearRange": 10,
    }
  }
/>
`;

exports[`<DatePicker /> renders 1`] = `
<TextInput
  id="datepickermockId"
  inputClassName="datepicker"
  options={
    Object {
      "autoClose": false,
      "container": null,
      "defaultDate": null,
      "disableDayFn": null,
      "disableWeekends": false,
      "events": Array [],
      "firstDay": 0,
      "format": "mmm dd, yyyy",
      "i18n": Object {
        "cancel": "Cancel",
        "clear": "Clear",
        "done": "Ok",
        "months": Array [
          "January",
          "February",
          "March",
          "April",
          "May",
          "June",
          "July",
          "August",
          "September",
          "October",
          "November",
          "December",
        ],
        "monthsShort": Array [
          "Jan",
          "Feb",
          "Mar",
          "Apr",
          "May",
          "Jun",
          "Jul",
          "Aug",
          "Sep",
          "Oct",
          "Nov",
          "Dec",
        ],
        "nextMonth": "›",
        "previousMonth": "‹",
        "weekdays": Array [
          "Sunday",
          "Monday",
          "Tuesday",
          "Wednesday",
          "Thursday",
          "Friday",
          "Saturday",
        ],
        "weekdaysAbbrev": Array [
          "S",
          "M",
          "T",
          "W",
          "T",
          "F",
          "S",
        ],
        "weekdaysShort": Array [
          "Sun",
          "Mon",
          "Tue",
          "Wed",
          "Thu",
          "Fri",
          "Sat",
        ],
      },
      "isRTL": false,
      "maxDate": null,
      "minDate": null,
      "onClose": null,
      "onDraw": null,
      "onOpen": null,
      "onSelect": null,
      "parse": null,
      "setDefaultDate": false,
      "showClearBtn": false,
      "showDaysInNextAndPreviousMonths": false,
      "showMonthAfterYear": false,
      "yearRange": 10,
    }
  }
/>
`;

exports[`<DatePicker /> renders with a label 1`] = `
<TextInput
  id="datepickermockId"
  inputClassName="datepicker"
  label="DatePicker label"
  options={
    Object {
      "autoClose": false,
      "container": null,
      "defaultDate": null,
      "disableDayFn": null,
      "disableWeekends": false,
      "events": Array [],
      "firstDay": 0,
      "format": "mmm dd, yyyy",
      "i18n": Object {
        "cancel": "Cancel",
        "clear": "Clear",
        "done": "Ok",
        "months": Array [
          "January",
          "February",
          "March",
          "April",
          "May",
          "June",
          "July",
          "August",
          "September",
          "October",
          "November",
          "December",
        ],
        "monthsShort": Array [
          "Jan",
          "Feb",
          "Mar",
          "Apr",
          "May",
          "Jun",
          "Jul",
          "Aug",
          "Sep",
          "Oct",
          "Nov",
          "Dec",
        ],
        "nextMonth": "›",
        "previousMonth": "‹",
        "weekdays": Array [
          "Sunday",
          "Monday",
          "Tuesday",
          "Wednesday",
          "Thursday",
          "Friday",
          "Saturday",
        ],
        "weekdaysAbbrev": Array [
          "S",
          "M",
          "T",
          "W",
          "T",
          "F",
          "S",
        ],
        "weekdaysShort": Array [
          "Sun",
          "Mon",
          "Tue",
          "Wed",
          "Thu",
          "Fri",
          "Sat",
        ],
      },
      "isRTL": false,
      "maxDate": null,
      "minDate": null,
      "onClose": null,
      "onDraw": null,
      "onOpen": null,
      "onSelect": null,
      "parse": null,
      "setDefaultDate": false,
      "showClearBtn": false,
      "showDaysInNextAndPreviousMonths": false,
      "showMonthAfterYear": false,
      "yearRange": 10,
    }
  }
/>
`;
